--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, animi repellendus 
         facere quam eos officiis ratione quos, eaque optio aspernatur 
         iusto reprehenderit quasi quod! Minima iusto explicabo sit reiciendis qui.</p>
+    <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui nisi 
+        voluptatibus modi assumenda ipsum fuga ea consequuntur perferendis inventore, at rerum obcaecati, 
+        maxime eius, odio mollitia dolorum numquam similique beatae.</p>
     
 </body>
 </html>
